Updated .gitignore directories patterns

--- a/scripts/python-scripts/.gitignore
+++ b/scripts/python-scripts/.gitignore
@@ -1,10 +1,10 @@
 *.npy
 *.zip
-data
-heatmaps/fig
-heatmaps/fungi-test/results
-heatmaps/heatmaps-data
-heatmaps/results_secreted
-model_ensemble/models
-model_ensemble/pred_result
-model_ensemble/test_results
+/data
+/heatmaps/fig
+/heatmaps/fungi-test/results
+/heatmaps/heatmaps-data
+/heatmaps/results_secreted
+/model_ensemble/models
+/model_ensemble/pred_result
+/model_ensemble/test_results
